Fix: Rendering icone
Adottata versione statica icon font per velocizzare il caricamento

(Il caricamento eccessivamente lento provocava layout shift)

--- a/html/css/icons.css
+++ b/html/css/icons.css
@@ -1,13 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0');
 
 .material-symbols-outlined {
 	color: #999;
 	font-size: 18px;
-	font-variation-settings:
-	'FILL' 0,
-	'wght' 400,
-	'GRAD' 0,
-	'opsz' 20;
 }
 
 button >.material-symbols-outlined:has(+.label) {
